mobile header refactorings

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" type="image/ico" href="https://www.jumia.co.ke/assets_he/favicon.717283be.ico" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Jumia Clone</title>
   </head>
   <body>
